# ApMech

./: .gitignore  LICENSE  Makefile  Makefile.am  Makefile.in  README  SConstruct  aclocal.m4  apserver.cfg  autogen.sh  config.h.in  configure  configure.ac  doxygen.cfg  git-tips.txt  ogre.cfg  plugins.cfg  plugins_WIN32.cfg  resources.cfg  winbuild.bat
Media/configs/: Marti.imageset  Marti.looknfeel  Marti.scheme  Marti.tga  meshviewer.config  meshviewer.layout
Media/gui/: ApMechLook.imageset  ApMechLook.looknfeel  ApMechLook.tga  ApMechLookSkin.scheme  ApMechLookWidgetAliases.scheme  TaharezLook.imageset
Media/inProgress/: FullMech.mesh  FullMech.mesh.xml  MechRoot.skeleton  MechRoot.skeleton.xml  MissileMech.blend  MissileMech_SingleObject.blend  MissileMech_SingleObject.blend1
Media/models/: CrudeMech.mesh  CrudeMissile.mesh  FullMech.mesh  HybridFalcon-h.mesh  HybridFalcon-l.mesh  HybridFalcon-l.skeleton  HybridFalcon-legs.mesh  HybridFalcon-legs.skeleton  HybridFalcon-torso.mesh  MechRoot.skeleton
Media/particle/: ApMech.particle
WIN32_DEPENDENCIES/lib/: CEGUIBase_d.lib  CEGUICoronaImageCodec_d.lib  CEGUIDevILImageCodec_d.lib  CEGUIExpatParser_d.lib  CEGUIFalagardWRBase_d.lib  CEGUIFreeImageImageCodec_d.lib  CEGUILua_d.lib  CEGUISILLYImageCodec_d.lib  CEGUITGAImageCodec_d.lib  OgreGUIRenderer_d.lib  OgreMain_d.lib  enet.lib  tolua++_d.lib
data/: mech.dtd  objectProtos.dtd  objectProtos.xml
data/maps/: cratersedge.map  cratersedge.terrain  example.terrain  glacier.map  glacier.terrain  test.map
data/mechs/: blackdestroyer-11.xml  hybridfalcon-15.xml  mech.dtd
docs/: git-tips.txt
docs/concept/: arena_lobby.xcf  character_creation.xcf  character_login.xcf  server_login.xcf
jonni/cegui_sdl_test/: Makefile  cegui_sdl_test.cbp  cegui_sdl_test.depend  main.cpp
jonni/nabla-wing/: Makefile  forgotten-readme.txt  winbuild.bat
makefiles/apserver_proj/: apserver.vcproj
makefiles/vc2008/: vc2008.sln  vc2008.vcproj
osx/: Info.plist  macosx.py  plugins.cfg  resources.cfg
sample1_ismo/: Makefile  ogre.cfg
sample1_ismo/Mac/: resources.cfg
sample1_ismo/sample1_ismo.xcodeproj/: ipuustin.pbxuser  ipuustin.perspectivev3  project.pbxproj
sample1_ismo/sample_1_vs2008/: ogre.cfg  sample_1_vs2008.sln
sample1_ismo/src/: .SampleApp.cpp.swp  SampleApp.cpp~  apeventhandler.cpp  apeventhandler.h  apframelistener.cpp  apframelistener.h  apgui.cpp  apgui.h  apmech.cpp  apmech.h  gameengine.cpp  (+10 more)
sample1_jonni/: Makefile  winbuild.bat
sample1_jukka/: #Makefile#  Info.plist  Makefile  Makefile~  SampleApp  resources.cfg  resources.cfg~
src/: ActionKeyMap.cpp  ActionKeyMap.h  CombinedControls.cpp  CombinedControls.h  Controller.h  GameState.cpp  GameState.h  GameStateManager.cpp  GameStateManager.h  GameWorld.cpp  GameWorld.h  Gui.cpp  Gui.h  GuiChatReceiver.h  GuiLoginReceiver.h  GuiMainMenuReceiver.h  GuiMouseReceiver.h  KeyConfMenuState.cpp  KeyConfMenuState.h  LimboState.cpp  LimboState.h  LoginState.cpp  LoginState.h  MainMenuState.cpp  MainMenuState.h  Makefile.am  Makefile.in  Mech.cpp  Mech.h  MechData.cpp  MechData.h  MechDatabase.cpp  MechDatabase.h  MechReader.cpp  MechReader.h  MenuStateViewport.cpp  MenuStateViewport.h  MovableControl.cpp  MovableControl.h  MovingObject.cpp  (+40 more)
src/math/: Makefile.am  Makefile.in  rotations.cpp  rotations.hpp
src/model/: Makefile  README  datamodelC.cpp  datamodelH.h  datamodelStub.h  datamodel_h.h  genmech.nsmap
src/net/: Controller.h  Makefile.am  Makefile.in  NetEvent.cpp  NetEvent.h  NetMessage.cpp  NetMessage.h  NetObject.h  NetObjectStore.cpp  NetObjectStore.h  NetUser.cpp  NetUser.h  Serializable.h  netdata.cpp  netdata.h  serializer.cpp  serializer.h  serializer.hpp
src/ooinput/: .gitignore  InputSystem.cpp  InputSystem.h  KeyEvent.h  KeyboardListener.h  Makefile  Makefile.am  Makefile.in  MouseClickedEvent.h  MouseListener.h  MouseMovedEvent.h  SDLInputSystem.cpp  SDLInputSystem.h  TestListener.cpp  TestListener.h  main.cpp  ogre.cfg  plugins.cfg
src/server/: Makefile.am  Makefile.in  MatchRules.cpp  MatchRules.h  Server.cpp  Server.h  Server.hpp  utilities.cpp  utilities.h
(+94 files in other folders)
